# bitecli

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.bitecli/: bitecli.db  config.json
bitecli/: cli.py  config.py  db.py  fetcher.py  llm.py
bitecli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
