[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitecli"
version = "0.1.0"
description = "A bite-sized educational CLI tool"
readme = "README.md"
authors = [
    { name="Arshaq", email="user@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "rich",
    "feedparser",
    "requests",
]

[project.scripts]
bitecli = "bitecli.cli:main"
